--------------------------------------------------------------------------------
 Fusion 1.212 - June 30th, 2004
--------------------------------------------------------------------------------
- 06-22-04: Fixed #963 - M/F registeration conflict. Multiple account creation with same username. [AlexKreuz] 
- 06-22-04: Accidentally put vit instead of agi. [Trihan]
- 06-22-04: Forgot to update agi when Quagmire expires. [Trihan]
- 06-22-04: Fixed #651 - Quagmire not lasting long enough, and made it halve agi. [Trihan]
- 06-18-04: Fixed #962 - Leaf of Yggdrasil without Blue Gemstone caused crash. [AlexKreuz]
- 06-18-04: Fixed #960 - Dual weapon characters crashed other players. [AlexKreuz]
- 06-17-04: Included realtime INI server options editing in JCon.[AlexKreuz]
- 06-17-04: Reimplemented realtime priority changing (the one Harb removed).[AlexKreuz]
- 06-17-04: Separated JCon from Main. Created JCon.pas.[AlexKreuz]
- 06-17-04: Separated INI saving from Main. Created WeissINI.pas. [AlexKreuz]
- 06-16-04: onTimer event crashed server on server close. [AlexKreuz & ChrstphrR]
- 06-16-04: Fixed Sage Skil Cast Freedom. [Darkhelmet]
- 06-16-04: Changed Charset from SHIFT_JIS to DEFAULT to fix display problems for some people. [AlexKreuz]
- 06-16-04: Updated JCon, character disconnected before update. [AlexKreuz]
- 06-16-04: Fixed JCon, Accounts ban wan't being updated. [AlexKreuz]
- 06-16-04: More aggressive Auto-Protection against crashes. [AlexKreuz]
- 06-16-04: Base & Job experiences uncapped. [AlexKreuz]
- 06-16-04: Built in account creator. [AlexKreuz]
- 06-16-04: Live editing of account data. [AlexKreuz]
- 06-16-04: New interface. (OMFG IT IS BEAUTIFUL) [AlexKreuz]
- 06-15-04: Added basis for donpcevent. [Darkhelmet]
- 06-15-04: Fixed procedure FindTargetsInAttackRange. [Darkhelmet]
- 06-15-04: Fixed weapon sprites viewable by others broke with dye fix. [AlexKreuz]
- 06-15-04: Performance increase. Less map area processing. 336 less tiles. 5376 less spots. [AlexKreuz]